# meowmx

./: README.md  changelog.md  justfile  pyproject.toml
examples/: aggregate-writer.py  read-events.py  save-event.py  setup-tables.py  worker.py
src/: demolib.py
src/demos/: endless_updater.py  raw_insert.py  setup_tables.py  sub.py  sub_2.py  update_cat.py  watch_all.py
src/meowmx/: __init__.py  client.py  registry.py  sourcery.py  worker.py
src/meowmx/aggregates/: aggregate.py
src/meowmx/common/: __init__.py  types.py
src/meowmx/esp/: esp.py  migrations.py
src/meowmx/sqlalchemy/: client.py  locked.py  tables.py
src/meowmx/workers/: __init__.py  tables.py  worker.py
tests/: conftest.py  test_combined_tx.py  test_save_and_load.py  test_subs.py
